# LillisEngine

./: .gitignore  CMakeLists.txt  README.md
ExampleGame/: CMakeLists.txt  Example.cpp  ExampleGame.vcxproj  ExampleGame.vcxproj.filters  Game.cpp  PlayerController.cpp  PlayerController.h  Rotator.cpp  Rotator.h
ExampleGame/assets/: Imports.lilimp  Level.lvl  PhysLevel.lvl  StaticData.lil
core/: CMakeLists.txt  Engine.cpp  Engine.h  Lillis.h  pch.h
core/EngineStuffs/: Component.cpp  Component.h  ComponentPool.h  GameObjPool.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  GameWorld.cpp  GameWorld.h  ObjectGrouping.cpp  ObjectGrouping.h  SceneGraph.cpp  SceneGraph.h  SpatialHasher.cpp  SpatialHasher.h  StateObject.cpp  StateObject.h  Transform.h  WorldManager.cpp  WorldManager.h
core/EngineStuffs/Audio/: AudioSystem.cpp  AudioSystem.h  miniaudio.h
core/EngineStuffs/Behaviors/: Behavior.cpp  Behavior.h  BehaviorSystem.cpp  BehaviorSystem.h  PlayerController.cpp  PlayerController.h  Rotator.cpp  Rotator.h
core/EngineStuffs/Graphics/: Animation.h  Animator.cpp  Animator.h  BackgroundManager.cpp  BackgroundManager.h  Camera.h  Color.h  DefaultRenderPipeline.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsSystem.cpp  GraphicsSystem.h  LilCursor.cpp  LilCursor.h  LilSpline.cpp  LilSpline.h  LillisWindow.h  Parallax.cpp  Parallax.h  ProcGen.cpp  ProcGen.h  ProcGenData.h  RenderOrder.cpp  RenderOrder.h  RenderSettings.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h
core/EngineStuffs/Memory/: ComponentPool.h  LilObj.h  MemoryPool.h
core/EngineStuffs/MemoryManagement/: BehaviorPool.h  ComponentPool.h  GameObjPool.h  LilObj.h  MemoryPool.h  Serializer.h
core/EngineStuffs/Particles/: ParticleEffect.cpp  ParticleEffect.h  ParticleEmitter.cpp  ParticleEmitter.h
core/EngineStuffs/Physics/: AABB.cpp  AABB.h  ColManifold.cpp  ColManifold.h  CollisionChecker.cpp  CollisionChecker.h  CollisionMatrix.cpp  CollisionMatrix.h  PhysJoint.cpp  PhysJoint.h  PhysicsEventHandler.cpp  PhysicsEventHandler.h  PhysicsMaterial.h  PhysicsSystem.cpp  PhysicsSystem.h  RectangleCollider.cpp  RectangleCollider.h  RigidBody.cpp  RigidBody.h
core/EngineStuffs/Tilemaps/: TileCollider.cpp  TileCollider.h  TileGrid.cpp  TileGrid.h  TileMap.cpp  TileMap.h
core/EngineStuffs/UI/: UIBehaviorManager.cpp  UIBehaviorManager.h  UIObject.cpp  UIObject.h  UIRenderer.cpp  UIRenderer.h  UISystem.cpp  UISystem.h
core/System/: System_Win32.cpp  System_Win32.h
core/Utils/: FileDataWrapper.cpp  FileDataWrapper.h  InputSystem.cpp  InputSystem.h  LILParser.cpp  LILParser.h  LilRandom.cpp  LilRandom.h  Prototype.cpp  Prototype.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  SceneLoader.cpp  SceneLoader.h  StackAllocator.cpp  StackAllocator.h  StaticDataManager.cpp  StaticDataManager.h  Timers.cpp  Timers.h  Timing.cpp  Timing.h
core/Utils/Events/: ColliderAliveEvent.h  CollisionEvent.cpp  CollisionEvent.h  ControllerAxisEvent.cpp  ControllerAxisEvent.h  ControllerButtonEvent.cpp  ControllerButtonEvent.h  EditorEvent.cpp  Event.cpp  Event.h  EventSystem.h  (+14 more)
(+114 files in other folders)
